--- a/src/main/resources/static/controle-bascule-hjds.html
+++ b/src/main/resources/static/controle-bascule-hjds.html
@@ -148,10 +148,26 @@
         <h1 class="sidebar-title">Argon Dashboard</h1>
     </div>
     <ul class="nav-menu">
-        <li class="nav-item"><i class="fas fa-home"></i><a href="home.html">Dashboard</a></li>
-        <li class="nav-item"><i class="fas fa-weight"></i><a href="controle-bascule-hjds.html">C. Bascule HJ & DS</a></li>
-        <li class="nav-item"><i class="fas fa-weight-hanging"></i><a href="controle-bascule-dsnord.html">C. Bascule DS NORD</a></li>
-        <li class="nav-item"><i class="fas fa-truck-loading"></i><a href="controle-bascule-ka.html">C. Bascule KA</a></li>
+        <li class="nav-item">
+            <i class="fas fa-home"></i>
+            <a href="home.html">Dashboard</a>
+        </li>
+        <li class="nav-item">
+            <i class="fas fa-weight"></i>
+            <a href="controle-bascule-hjds.html">C. Bascule HJ & DS</a>
+        </li>
+        <li class="nav-item">
+            <i class="fas fa-weight"></i>
+            <a href="dsClassique.html">DS classique</a>
+        </li>
+        <li class="nav-item">
+            <i class="fas fa-weight-hanging"></i>
+            <a href="dsNord.html">DS NORD</a>
+        </li>
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="controle-bascule-ka.html">C. Bascule KA</a>
+        </li>
     </ul>
 </div>
 
