--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -114,12 +114,20 @@
             <a href="controle-bascule-hjds.html">C. Bascule HJ & DS</a>
         </li>
         <li class="nav-item">
+            <i class="fas fa-weight"></i>
+            <a href="dsClassique.html">DS classique</a>
+        </li>
+        <li class="nav-item">
             <i class="fas fa-weight-hanging"></i>
-            <a href="controle-bascule-dsnord.html">C. Bascule DS NORD</a>
+            <a href="dsNord.html">DS NORD</a>
         </li>
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
             <a href="controle-bascule-ka.html">C. Bascule KA</a>
+        </li>
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="chauxVive.html">chaux Vive</a>
         </li>
     </ul>
 </div>
