--- a/src/main/resources/static/dsNord.html
+++ b/src/main/resources/static/dsNord.html
@@ -113,7 +113,7 @@
     <ul class="nav-menu">
         <li class="nav-item">
             <i class="fas fa-home"></i>
-            <a href="home.html">Dashboard</a>
+            <a href="index.html">Dashboard</a>
         </li>
         <li class="nav-item">
             <i class="fas fa-weight"></i>
