--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -107,7 +107,7 @@
     <ul class="nav-menu">
         <li class="nav-item">
             <i class="fas fa-home"></i>
-            <a href="home.html">Dashboard</a>
+            <a href="index.html">Dashboard</a>
         </li>
         <li class="nav-item">
             <i class="fas fa-weight"></i>
@@ -128,6 +128,27 @@
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
             <a href="chauxVive.html">chaux Vive</a>
+        </li>
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="chauxViveLafarge.html">chaux Vive Lafarge</a>
+        </li>
+        <li class="nav-item">
+        <i class="fas fa-truck-loading"></i>
+        <a href="cbulkArgentifere.html">C,BULK(stuffing lead)</a>
+    </li>
+
+        <li class="nav-item">
+        <i class="fas fa-truck-loading"></i>
+        <a href="expZincOncf.html"> exp Zinc Oncf </a>
+        </li>
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="walo.html">3mr li b4iti </a>
+        </li>
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="walo.html">3mr li b4iti </a>
         </li>
     </ul>
 </div>
