--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -854,7 +854,31 @@
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
             <a href="expZincOncf.html"><span>Exp Zinc Oncf</span></a>
+
         </li>
+
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="expZincSafi.html"><span>Exp Zinc safi</span></a>
+
+        </li>
+
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="expCuivreOncf.html"><span> Cuivre Oncf </span></a>
+
+        </li>
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="expCuivreNord.html"><span> Cuivre Nord</span></a>
+
+        </li>
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="hm.html"><span> lmli7 jay </span></a>
+
+        </li>
+
         <li class="nav-item">
             <i class="fas fa-cog"></i>
             <a href="#"><span>Settings</span></a>
