--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -873,6 +873,12 @@
             <a href="expCuivreNord.html"><span> Cuivre Nord</span></a>
 
         </li>
+
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="expPbCmgOnf.html"><span>  PB-ONCF  </span></a>
+
+        </li>
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
             <a href="hm.html"><span> lmli7 jay </span></a>
