--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -881,7 +881,7 @@
         </li>
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
-            <a href="hm.html"><span> lmli7 jay </span></a>
+            <a href="synthese.html"><span> synthese lmli777777a </span></a>
 
         </li>
 
