--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -881,9 +881,15 @@
         </li>
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
-            <a href="synthese.html"><span> synthese lmli777777a </span></a>
+            <a href="synthese.html"><span> synthese  </span></a>
 
         </li>
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="rapportHajjar.html"><span> rapport Hajjar</span></a>
+
+        </li>
+
 
         <li class="nav-item">
             <i class="fas fa-cog"></i>
