--- a/src/main/resources/static/cbulkArgentifere.html
+++ b/src/main/resources/static/cbulkArgentifere.html
@@ -796,7 +796,7 @@
             </h1>
         </div>
         <ul class="nav-menu">
-            <li class="nav-item">
+            <li class="nav-item active">
                 <i class="fas fa-home"></i>
                 <a href="index.html"><span>Dashboard</span></a>
             </li>
@@ -824,7 +824,7 @@
                 <i class="fas fa-truck-loading"></i>
                 <a href="chauxViveLafarge.html"><span>Chaux Vive Lafarge</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <i class="fas fa-truck-loading"></i>
                 <a href="cbulkArgentifere.html"><span>C,BULK(stuffing lead)</span></a>
             </li>
@@ -858,9 +858,15 @@
             </li>
             <li class="nav-item">
                 <i class="fas fa-truck-loading"></i>
-                <a href="hm.html"><span> lmli7 jay </span></a>
+                <a href="synthese.html"><span> synthese  </span></a>
 
             </li>
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="rapportHajjar.html"><span> rapport Hajjar</span></a>
+
+            </li>
+
 
             <li class="nav-item">
                 <i class="fas fa-cog"></i>
