--- a/src/main/resources/static/controle-bascule-hjds.html
+++ b/src/main/resources/static/controle-bascule-hjds.html
@@ -615,11 +615,12 @@
 
 <aside class="sidebar">
     <ul class="nav-menu">
-        <li class="nav-item">
+        <li class="nav-item active">
             <i class="fas fa-home"></i>
             <a href="index.html"><span>Dashboard</span></a>
         </li>
-        <li class="nav-item active"> <i class="fas fa-weight"></i>
+        <li class="nav-item">
+            <i class="fas fa-weight"></i>
             <a href="controle-bascule-hjds.html"><span>C. Bascule HJ & DS</span></a>
         </li>
         <li class="nav-item">
@@ -649,27 +650,43 @@
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
             <a href="expZincOncf.html"><span>Exp Zinc Oncf</span></a>
+
         </li>
+
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
             <a href="expZincSafi.html"><span>Exp Zinc safi</span></a>
+
         </li>
+
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
             <a href="expCuivreOncf.html"><span> Cuivre Oncf </span></a>
+
         </li>
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
             <a href="expCuivreNord.html"><span> Cuivre Nord</span></a>
+
         </li>
+
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
             <a href="expPbCmgOnf.html"><span>  PB-ONCF  </span></a>
+
         </li>
         <li class="nav-item">
             <i class="fas fa-truck-loading"></i>
-            <a href="synthese.html"><span> synthese lmli777777a </span></a>
+            <a href="synthese.html"><span> synthese  </span></a>
+
         </li>
+        <li class="nav-item">
+            <i class="fas fa-truck-loading"></i>
+            <a href="rapportHajjar.html"><span> rapport Hajjar</span></a>
+
+        </li>
+
+
         <li class="nav-item">
             <i class="fas fa-cog"></i>
             <a href="#"><span>Settings</span></a>
@@ -678,7 +695,7 @@
             <i class="fas fa-question-circle"></i>
             <a href="#"><span>Help</span></a>
         </li>
-    </ul>
+    </ul>F
 </aside>
 
 <main>
