--- a/src/main/resources/static/dsNord.html
+++ b/src/main/resources/static/dsNord.html
@@ -718,7 +718,7 @@
             </h1>
         </div>
         <ul class="nav-menu">
-            <li class="nav-item">
+            <li class="nav-item active">
                 <i class="fas fa-home"></i>
                 <a href="index.html"><span>Dashboard</span></a>
             </li>
@@ -730,7 +730,7 @@
                 <i class="fas fa-weight"></i>
                 <a href="dsClassique.html"><span>DS classique</span></a>
             </li>
-            <li class="nav-item active"> <!-- Set active for current page: dsNord.html -->
+            <li class="nav-item">
                 <i class="fas fa-weight-hanging"></i>
                 <a href="dsNord.html"><span>DS NORD</span></a>
             </li>
