--- a/src/main/resources/static/expCuivreNord.html
+++ b/src/main/resources/static/expCuivreNord.html
@@ -764,9 +764,15 @@
             </li>
             <li class="nav-item">
                 <i class="fas fa-truck-loading"></i>
-                <a href="hm.html"><span> lmli7 jay </span></a>
+                <a href="synthese.html"><span> synthese  </span></a>
 
             </li>
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="rapportHajjar.html"><span> rapport Hajjar</span></a>
+
+            </li>
+
 
             <li class="nav-item">
                 <i class="fas fa-cog"></i>
