--- a/src/main/resources/static/chauxVive.html
+++ b/src/main/resources/static/chauxVive.html
@@ -925,18 +925,86 @@
             </h1>
         </div>
         <ul class="nav-menu">
-            <li class="nav-item"><i class="fas fa-home"></i><a href="index.html">Dashboard</a></li>
-            <li class="nav-item"><i class="fas fa-truck-ramp-box"></i><a href="controle-bascule-hjds.html">C. Bascule HJ & DS</a></li>
-            <li class="nav-item"><i class="fas fa-truck-front"></i><a href="dsClassique.html">DS Classique</a></li>
-            <li class="nav-item"><i class="fas fa-mountain"></i><a href="dsNord.html">DS NORD</a></li>
-            <li class="nav-item"><i class="fas fa-weight-scale"></i><a href="controle-bascule-ka.html">C. Bascule KA</a></li>
-            <li class="nav-item active"><i class="fas fa-fire"></i><a href="chauxVive.html">Chaux Vive</a></li>
-            <li class="nav-item"><i class="fas fa-industry"></i><a href="chauxViveLafarge.html">Chaux Vive Lafarge</a></li>
-            <li class="nav-item"><i class="fas fa-truck-field"></i><a href="cbulkArgentifere.html">C,BULK (Stuffing Lead)</a></li>
-            <li class="nav-item"><i class="fas fa-train"></i><a href="expZincOncf.html">Exp Zinc ONCF</a></li>
-            <li class="nav-item"><i class="fas fa-box"></i><a href="expCuivreOncf.html">Exp C.CUIVRE ONCF</a></li>
-            <li class="nav-item"><i class="fas fa-boxes-stacked"></i><a href="expCuivreNord.html">Exp C.CUIVRE NORD</a></li>
-            <li class="nav-item"><i class="fas fa-pallet-boxes"></i><a href="expPbCmgOnf.html">Exp PB CMG/ONF</a></li>
+            <li class="nav-item active">
+                <i class="fas fa-home"></i>
+                <a href="index.html"><span>Dashboard</span></a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-weight"></i>
+                <a href="controle-bascule-hjds.html"><span>C. Bascule HJ & DS</span></a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-weight"></i>
+                <a href="dsClassique.html"><span>DS classique</span></a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-weight-hanging"></i>
+                <a href="dsNord.html"><span>DS NORD</span></a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="controle-bascule-ka.html"><span>C. Bascule KA</span></a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="chauxVive.html"><span>Chaux Vive</span></a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="chauxViveLafarge.html"><span>Chaux Vive Lafarge</span></a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="cbulkArgentifere.html"><span>C,BULK(stuffing lead)</span></a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="expZincOncf.html"><span>Exp Zinc Oncf</span></a>
+
+            </li>
+
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="expZincSafi.html"><span>Exp Zinc safi</span></a>
+
+            </li>
+
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="expCuivreOncf.html"><span> Cuivre Oncf </span></a>
+
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="expCuivreNord.html"><span> Cuivre Nord</span></a>
+
+            </li>
+
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="expPbCmgOnf.html"><span>  PB-ONCF  </span></a>
+
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="synthese.html"><span> synthese  </span></a>
+
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-truck-loading"></i>
+                <a href="rapportHajjar.html"><span> rapport Hajjar</span></a>
+
+            </li>
+
+
+            <li class="nav-item">
+                <i class="fas fa-cog"></i>
+                <a href="#"><span>Settings</span></a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-question-circle"></i>
+                <a href="#"><span>Help</span></a>
+            </li>
         </ul>
     </div>
     <div class="sidebar-footer">
@@ -1195,8 +1263,8 @@
                         <td data-label="Lieu déchargement">${e.lieuDechargement || ''}</td>
                         <td data-label="Observation">${e.observation || ''}</td>
                         <td class="table-actions">
-                            <button onclick='editRow(${JSON.stringify(e)})'><i class="fas fa-edit"></i> Modifier</button>
-                            <button class="delete-btn" onclick='deleteRow("${e.id || e._id}")'><i class="fas fa-trash-alt"></i> Supprimer</button>
+                            <button onclick='editRow(${JSON.stringify(e)})'><i class="fas fa-edit"></i> </button>
+                            <button class="delete-btn" onclick='deleteRow("${e.id || e._id}")'><i class="fas fa-trash-alt"></i></button>
                         </td>
                     `;
                 tbody.appendChild(tr);
