--- a/src/main/resources/static/controle-bascule-ka.html
+++ b/src/main/resources/static/controle-bascule-ka.html
@@ -718,7 +718,7 @@
             </h1>
         </div>
         <ul class="nav-menu">
-            <li class="nav-item">
+            <li class="nav-item active">
                 <i class="fas fa-home"></i>
                 <a href="index.html"><span>Dashboard</span></a>
             </li>
@@ -734,7 +734,7 @@
                 <i class="fas fa-weight-hanging"></i>
                 <a href="dsNord.html"><span>DS NORD</span></a>
             </li>
-            <li class="nav-item active"> <!-- Set active for current page: controle-bascule-ka.html -->
+            <li class="nav-item">
                 <i class="fas fa-truck-loading"></i>
                 <a href="controle-bascule-ka.html"><span>C. Bascule KA</span></a>
             </li>
