--- a/src/main/resources/static/dsClassique.html
+++ b/src/main/resources/static/dsClassique.html
@@ -718,7 +718,7 @@
             </h1>
         </div>
         <ul class="nav-menu">
-            <li class="nav-item">
+            <li class="nav-item active">
                 <i class="fas fa-home"></i>
                 <a href="index.html"><span>Dashboard</span></a>
             </li>
@@ -726,7 +726,7 @@
                 <i class="fas fa-weight"></i>
                 <a href="controle-bascule-hjds.html"><span>C. Bascule HJ & DS</span></a>
             </li>
-            <li class="nav-item active"> <!-- Set active for current page -->
+            <li class="nav-item">
                 <i class="fas fa-weight"></i>
                 <a href="dsClassique.html"><span>DS classique</span></a>
             </li>
