--- a/src/main/resources/static/synthese.html
+++ b/src/main/resources/static/synthese.html
@@ -91,7 +91,8 @@
         .nav-menu {
             list-style: none;
             padding: 0;
-            margin: 0;
+            margin: 30px 0 0 0;
+            flex-grow: 1;
         }
 
         .nav-item {
